mobile bar fix on mobile

--- a/src/pomodoro/pomodoro.css
+++ b/src/pomodoro/pomodoro.css
@@ -38,7 +38,7 @@
 @media (max-width: 800px) {
   .progress {
     width: 275px;
-    margin-left: 30px;
+    margin-left: 33px;
   }
 }
 
